@@ -2,6 +2,7 @@ package uk.gov.hmcts.darts.dailylist.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import net.javacrumbs.shedlock.core.LockConfiguration;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.darts.common.entity.DailyListEntity;
 import uk.gov.hmcts.darts.common.repository.DailyListRepository;
@@ -10,13 +11,16 @@ import uk.gov.hmcts.darts.dailylist.enums.SourceType;
 import uk.gov.hmcts.darts.dailylist.service.DailyListProcessor;
 import uk.gov.hmcts.darts.log.api.LogApi;
 import uk.gov.hmcts.darts.log.util.DailyListLogJobReport;
+import uk.gov.hmcts.darts.task.api.AutomatedTasksApi;
 
+import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 
 import static java.time.LocalDate.now;
 import static java.util.Arrays.stream;
 import static java.util.stream.Collectors.groupingBy;
+import static uk.gov.hmcts.darts.task.api.AutomatedTaskName.PROCESS_DAILY_LIST_TASK_NAME;
 
 @Service
 @RequiredArgsConstructor
@@ -26,13 +30,30 @@ public class DailyListProcessorImpl implements DailyListProcessor {
     private final DailyListRepository dailyListRepository;
     private final DailyListUpdater dailyListUpdater;
     private final LogApi logApi;
+    private final AutomatedTasksApi automatedTasksApi;
+
+    @Override
+    public void processAllDailyListsWithLock(String listingCourthouse) {
+        automatedTasksApi.getLockingTaskExecutor().executeWithLock((Runnable) () -> {
+            if (listingCourthouse == null) {
+                processAllDailyLists();
+            } else {
+                processAllDailyListForListingCourthouse(listingCourthouse);
+            }
+        }, new LockConfiguration(
+            Instant.now(),
+            PROCESS_DAILY_LIST_TASK_NAME.getTaskName(),
+            automatedTasksApi.getLockAtMostFor(),
+            automatedTasksApi.getLockAtLeastFor())
+        );
+    }
 
     @Override
     public void processAllDailyLists() {
 
         stream(SourceType.values()).forEach(sourceType -> {
 
-            var dailyListsGroupedByCourthouse = dailyListRepository.findByStatusAndStartDateAndSourceOrderByPublishedTimestampDesc(
+            var dailyListsGroupedByCourthouse = dailyListRepository.findByStatusAndStartDateAndSourceOrderByPublishedTimestampDescCreatedDateTimeDesc(
                 JobStatusType.NEW,
                 now(),
                 String.valueOf(sourceType)
@@ -87,14 +108,14 @@ public class DailyListProcessorImpl implements DailyListProcessor {
 
         if (!dailyLists.isEmpty()) {
             try {
-                dailyListUpdater.processDailyList(dailyLists.get(0));
+                dailyListUpdater.processDailyList(dailyLists.getFirst());
 
                 // report on the daily list result
-                report.registerResult(dailyLists.get(0).getStatus());
+                report.registerResult(dailyLists.getFirst().getStatus());
             } catch (Exception e) {
-                dailyLists.get(0).setStatus(JobStatusType.FAILED);
+                dailyLists.getFirst().setStatus(JobStatusType.FAILED);
                 report.registerFailed();
-                log.error("Failed to process dailylist for dailylist id: {}", dailyLists.get(0).getId(), e);
+                log.error("Failed to process dailylist for dailylist id: {}", dailyLists.getFirst().getId(), e);
             }
 
             if (dailyLists.size() > 1) {
